2014-09-01  Jakub Jelinek  <jakub@redhat.com>

	* config/gnu-user.h (LIBLSAN_EARLY_SPEC): Define.
	* gcc.c (LIBLSAN_SPEC, LIBLSAN_EARLY_SPEC): Follow LIBTSAN*_SPEC.
	(SANITIZER_EARLY_SPEC): Include LIBLSAN_EARLY_SPEC for -fsanitize=leak.

2014-09-01  Marek Polacek  <polacek@redhat.com>

	Backport from mainline
	2014-08-21  Marek Polacek  <polacek@redhat.com>

	PR c/61271
	* expr.c (is_aligning_offset): Remove logical not.

2014-09-01  Marek Polacek  <polacek@redhat.com>

	Backport from mainline
	2014-08-19  Marek Polacek  <polacek@redhat.com>

	PR c/61271
	* cgraphunit.c (handle_alias_pairs): Fix condition.

2014-08-30  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.c (pa_assemble_integer): Don't add PLABEL relocation
	prefix to function labels when generating fast indirect calls.

2014-08-29  Yvan Roux  <yvan.roux@linaro.org>

	Backport from mainline
	2014-08-27  Yvan Roux  <yvan.roux@linaro.org>

	PR other/62248
	* config.gcc (arm*-*-*): Check --with-fpu against arm-fpus.def.

2014-08-27  Guozhi Wei  <carrot@google.com>

	PR target/62262
	* config/aarch64/aarch64.md (*andim_ashift<mode>_bfiz): Check the shift
	amount before using it.

2014-08-26  Joel Sherrill <joel.sherrill@oarcorp.com>

	* doc/invoke.texi: -fno-cxa-atexit should be -fno-use-cxa-atexit.

2014-08-26  Marek Polacek  <polacek@redhat.com>

	Backport from mainline
	2014-08-26  Marek Polacek  <polacek@redhat.com>

	PR c/61271
	* tree-vectorizer.h (LOOP_REQUIRES_VERSIONING_FOR_ALIGNMENT,
	LOOP_REQUIRES_VERSIONING_FOR_ALIAS): Wrap in parens.

2014-08-24  Oleg Endo  <olegendo@gcc.gnu.org>

	Backport from mainline
	2014-08-24  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/61996
	* config/sh/sh.opt (musermode): Allow negative form.
	* config/sh/sh.c (sh_option_override): Disable TARGET_USERMODE for
	targets that don't support it.
	* doc/invoke.texi (SH Options): Rename sh-*-linux* to sh*-*-linux*.
	Document -mno-usermode option.

2014-08-23  John David Anglin  <danglin@gcc.gnu.org>
